Bug 48385 - pgadmin3 popup in explain-analyze hits assert
Summary: pgadmin3 popup in explain-analyze hits assert
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-06 06:26 UTC by Clemens Eisserer
Modified: 2012-04-06 07:40 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
debug log (2.25 MB, application/octet-stream)
2012-04-06 07:03 UTC, Clemens Eisserer
no flags Details

Description Clemens Eisserer 2012-04-06 06:26:03 UTC
When clicking on an icon in pgadmin3's graphical explain analyze view, I hit the following assertion:


Program received signal SIGABRT, Aborted.
0x00c35416 in __kernel_vsyscall ()
(gdb) bt
#0  0x00c35416 in __kernel_vsyscall ()
#1  0x426b698f in __GI_raise (sig=6)
    at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#2  0x426b82d5 in __GI_abort () at abort.c:91
#3  0x426af6a5 in __assert_fail_base (
    fmt=0x427f0e48 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n",
    assertion=0x2a2d98 "damage->extents.x1 == 0 && damage->extents.y1 == 0 && damage->extents.x2 == width && damage->extents.y2 == height",
    file=0x2a2b8b "sna_damage.c", line=953,
    function=0x2a2ef0 "_sna_damage_is_all") at assert.c:94
#4  0x426af757 in __GI___assert_fail (
    assertion=0x2a2d98 "damage->extents.x1 == 0 && damage->extents.y1 == 0 && damage->extents.x2 == width && damage->extents.y2 == height",
    file=0x2a2b8b "sna_damage.c", line=953,
    function=0x2a2ef0 "_sna_damage_is_all") at assert.c:103
#5  0x0020798c in _sna_damage_is_all (damage=0x922fef8, width=7361, height=95)
    at sna_damage.c:969
#6  0x001e89b8 in sna_damage_is_all (height=95, width=7361, _damage=0x918ab4c)
    at sna_damage.h:122
#7  sna_pixmap_move_to_gpu (pixmap=0x91857a0, flags=3) at sna_accel.c:2263
#8  0x001ea40f in sna_pixmap_force_to_gpu (pixmap=0x91857a0, flags=3)
    at sna_accel.c:2228
#9  0x0023c5d4 in gen3_composite_set_target (sna=0x8d41270,
---Type <return> to continue, or q <return> to quit---
    op=<optimized out>, dst=0x91857f0) at gen3_render.c:2479
#10 0x00244877 in gen3_render_composite (tmp=0xbfeee150, height=14, width=320,
    dst_y=58, dst_x=8, mask_y=0, mask_x=0, src_y=<optimized out>, src_x=8,
    dst=0x91857f0, mask=0x92304a0, src=0x9025870, op=3 '\003', sna=0x8d41270)
    at gen3_render.c:2801
#11 gen3_render_composite (sna=0x8d41270, op=3 '\003', src=0x9025870,
    mask=0x92304a0, dst=0x91857f0, src_x=8, src_y=58, mask_x=0, mask_y=0,
    dst_x=8, dst_y=58, width=320, height=14, tmp=0xbfeee150)
    at gen3_render.c:2747
#12 0x00205737 in sna_composite (op=3 '\003', src=0x9025870, mask=0x92304a0,
    dst=0x91857f0, src_x=8, src_y=58, mask_x=0, mask_y=0, dst_x=8, dst_y=58,
    width=320, height=14) at sna_composite.c:504
#13 0x0020f0dd in glyphs_via_mask (sna=0x8d41270, op=3 '\003', src=0x9025870,
    dst=0x91857f0, format=0x8d524d0, src_x=8, src_y=58, nlist=0,
    list=0xbfeeec18, glyphs=<optimized out>) at sna_glyphs.c:922
#14 0x002108c7 in sna_glyphs (op=3 '\003', src=0x9025870, dst=0x91857f0,
    mask=0x8d524d0, src_x=7, src_y=69, nlist=1, list=0xbfeeec0c,
    glyphs=0xbfeee80c) at sna_glyphs.c:1272
#15 0x08156dff in damageGlyphs (op=3 '\003', pSrc=0x9025870, pDst=0x91857f0,
    maskFormat=0x8d524d0, xSrc=7, ySrc=69, nlist=1, list=0xbfeeec0c,
    glyphs=0xbfeee80c) at damage.c:647
#16 0x081438a1 in CompositeGlyphs (op=3 '\003', pSrc=0x9025870,
    pDst=0x91857f0, maskFormat=0x8d524d0, xSrc=7, ySrc=69, nlist=1,
---Type <return> to continue, or q <return> to quit---
    lists=0xbfeeec0c, glyphs=0xbfeee80c) at glyph.c:604
#17 0x08150758 in ProcRenderCompositeGlyphs (client=0x8fe0790) at render.c:1440
#18 0x0814a064 in ProcRenderDispatch (client=0x8fe0790) at render.c:2063
#19 0x08076195 in Dispatch () at dispatch.c:439
#20 0x0806439a in main (argc=7, argv=0xbfeef0b4, envp=0xbfeef0d4) at main.c:287
Comment 1 Chris Wilson 2012-04-06 06:28:13 UTC
Can you grab a full debug log as I need to find the original operation that exceeded the bounds?
Comment 2 Chris Wilson 2012-04-06 06:29:48 UTC
width=7361.

Oh my. I definitely want to see that debug log!
Comment 3 Clemens Eisserer 2012-04-06 07:03:25 UTC
Created attachment 59584 [details]
debug log

debug=full log, compressed with 7-zip as bzip2 would hit the 3000k upload limit
Comment 4 Chris Wilson 2012-04-06 07:40:36 UTC
commit b790ba2ec9ead51227d85fc8630bc7505eb7d7b3
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Apr 6 15:38:02 2012 +0100

    sna: Correct the damage offset for redirected rendering
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=48385
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

That should fix up the immediate problem, but I think I will want to reconsider the handling of such large glyph masks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.